// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single fields checkbox field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-boolean"
  >
    <div
      className="form-group"
    >
      <div
        aria-describedby="root__error root__description root__help"
        className="checkbox  form-group"
      >
        <div
          className="form-check"
        >
          <input
            autoFocus={false}
            checked={false}
            className="form-check-input position-static"
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="checkbox"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields checkbox field with label 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-boolean"
  >
    <div
      className="form-group"
    >
      <div
        aria-describedby="root__error root__description root__help"
        className="checkbox  form-group"
      >
        <div
          className="form-check"
        >
          <input
            autoFocus={false}
            checked={false}
            className="form-check-input"
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="checkbox"
          />
          <label
            className="form-check-label"
            htmlFor="root"
            title=""
          >
            test
          </label>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields checkboxes field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-array"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <div
        className="form-group"
      >
        <div
          className="bg-transparent border-0 custom-control custom-checkbox"
        >
          <input
            aria-describedby="root__error root__description root__help"
            autoFocus={false}
            checked={false}
            className="custom-control-input"
            disabled={false}
            id="root-0"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="checkbox"
          />
          <label
            className="custom-control-label"
            htmlFor="root-0"
            title=""
          >
            foo
          </label>
        </div>
        <div
          className="bg-transparent border-0 custom-control custom-checkbox"
        >
          <input
            aria-describedby="root__error root__description root__help"
            autoFocus={false}
            checked={false}
            className="custom-control-input"
            disabled={false}
            id="root-1"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="checkbox"
          />
          <label
            className="custom-control-label"
            htmlFor="root-1"
            title=""
          >
            bar
          </label>
        </div>
        <div
          className="bg-transparent border-0 custom-control custom-checkbox"
        >
          <input
            aria-describedby="root__error root__description root__help"
            autoFocus={false}
            checked={false}
            className="custom-control-input"
            disabled={false}
            id="root-2"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="checkbox"
          />
          <label
            className="custom-control-label"
            htmlFor="root-2"
            title=""
          >
            fuzz
          </label>
        </div>
        <div
          className="bg-transparent border-0 custom-control custom-checkbox"
        >
          <input
            aria-describedby="root__error root__description root__help"
            autoFocus={false}
            checked={false}
            className="custom-control-input"
            disabled={false}
            id="root-3"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="checkbox"
          />
          <label
            className="custom-control-label"
            htmlFor="root-3"
            title=""
          >
            qux
          </label>
        </div>
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields field with description 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="form-group"
    >
      
      <div
        className="p-0 container-fluid"
      >
        <div
          className="row"
          style={
            Object {
              "marginBottom": "10px",
            }
          }
        >
          <div
            className="col-12"
          >
             
            <div
              className="form-group field field-string"
            >
              <div
                className="form-group"
              >
                <label
                  className="form-label"
                  htmlFor="root_my-field"
                >
                  my-field
                </label>
                <input
                  aria-describedby="root_my-field__error root_my-field__description root_my-field__help"
                  autoFocus={false}
                  className="form-control"
                  disabled={false}
                  id="root_my-field"
                  name="root_my-field"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
                <small
                  className="text-muted form-text"
                >
                  <div>
                    <div
                      className="mb-3"
                      id="root_my-field__description"
                    >
                      some description
                    </div>
                  </div>
                </small>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields field with description in uiSchema 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="form-group"
    >
      
      <div
        className="p-0 container-fluid"
      >
        <div
          className="row"
          style={
            Object {
              "marginBottom": "10px",
            }
          }
        >
          <div
            className="col-12"
          >
             
            <div
              className="form-group field field-string"
            >
              <div
                className="form-group"
              >
                <label
                  className="form-label"
                  htmlFor="root_my-field"
                >
                  my-field
                </label>
                <input
                  aria-describedby="root_my-field__error root_my-field__description root_my-field__help"
                  autoFocus={false}
                  className="form-control"
                  disabled={false}
                  id="root_my-field"
                  name="root_my-field"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
                <small
                  className="text-muted form-text"
                >
                  <div>
                    <div
                      className="mb-3"
                      id="root_my-field__description"
                    >
                      some other description
                    </div>
                  </div>
                </small>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields format color 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <input
        aria-describedby="root__error root__description root__help"
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        readOnly={false}
        type="color"
        value=""
      />
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields format date 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <input
        aria-describedby="root__error root__description root__help"
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        readOnly={false}
        type="date"
        value=""
      />
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields format datetime 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <input
        aria-describedby="root__error root__description root__help"
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        readOnly={false}
        type="datetime-local"
        value=""
      />
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields format time 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <input
        aria-describedby="root__error root__description root__help"
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        readOnly={false}
        type="time"
        value=""
      />
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields help and error display 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="mb-4 card border-danger"
  >
    <div
      className="alert-danger card-header"
    >
      Errors
    </div>
    <div
      className="p-0 card-body"
    >
      <div
        className="list-group"
        onKeyDown={[Function]}
      >
        <div
          className="border-0 list-group-item"
          data-rb-event-key={null}
          disabled={false}
          onClick={[Function]}
        >
          <span>
            . an error
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="form-group field field-string field-error has-error has-danger"
  >
    <div
      className="form-group"
    >
      <label
        className="text-danger form-label"
        htmlFor="root"
      >
        
      </label>
      <input
        aria-describedby="root__error root__description root__help"
        autoFocus={false}
        className="is-invalid form-control"
        disabled={false}
        id="root"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        readOnly={false}
        type="text"
        value=""
      />
      
      <ul
        className="list-group"
        id="root__error"
        onKeyDown={[Function]}
      >
        <li
          className="border-0 m-0 p-0 list-group-item"
          data-rb-event-key={null}
          disabled={false}
          onClick={[Function]}
        >
          <small
            className="m-0 text-danger"
          >
            an error
          </small>
        </li>
      </ul>
      <small
        className="text-danger form-text"
        id="root__help"
      >
        help me!
      </small>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields hidden field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="form-group"
    >
      
      <div
        className="p-0 container-fluid"
      >
        <div
          className="d-none row"
          style={
            Object {
              "marginBottom": "10px",
            }
          }
        >
          <div
            className="col-12"
          >
             
            <div
              className="hidden"
            >
              <input
                id="root_my-field"
                name="root_my-field"
                type="hidden"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields hidden label 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <input
        aria-describedby="root__error root__description root__help"
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        readOnly={false}
        type="text"
        value=""
      />
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields null field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-null"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields number field 0 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-number"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <input
        aria-describedby="root__error root__description root__help"
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        readOnly={false}
        step="any"
        type="number"
        value={0}
      />
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields number field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-number"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <input
        aria-describedby="root__error root__description root__help"
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        readOnly={false}
        step="any"
        type="number"
        value=""
      />
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields password field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <input
        aria-describedby="root__error root__description root__help"
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        readOnly={false}
        type="password"
        value=""
      />
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields radio field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-boolean"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <div
        className="mb-0 form-group"
      >
        <div
          className="form-check"
        >
          <input
            aria-describedby="root__error root__description root__help"
            checked={false}
            className="form-check-input"
            disabled={false}
            id="root-0"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="radio"
            value="0"
          />
          <label
            className="form-check-label"
            htmlFor="root-0"
            title=""
          >
            Yes
          </label>
        </div>
        <div
          className="form-check"
        >
          <input
            aria-describedby="root__error root__description root__help"
            checked={false}
            className="form-check-input"
            disabled={false}
            id="root-1"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="radio"
            value="1"
          />
          <label
            className="form-check-label"
            htmlFor="root-1"
            title=""
          >
            No
          </label>
        </div>
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields schema examples 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <input
        aria-describedby="root__error root__description root__help root__examples"
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        list="root__examples"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        readOnly={false}
        type="text"
        value=""
      />
      <datalist
        id="root__examples"
      >
        <option
          value="Firefox"
        />
        <option
          value="Chrome"
        />
        <option
          value="Opera"
        />
        <option
          value="Vivaldi"
        />
        <option
          value="Safari"
        />
      </datalist>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <select
        aria-describedby="root__error root__description root__help"
        autoFocus={false}
        className="custom-select"
        disabled={false}
        id="root"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value=""
      >
        <option
          value=""
        >
          
        </option>
        <option
          disabled={false}
          id="foo"
          value="0"
        >
          foo
        </option>
        <option
          disabled={false}
          id="bar"
          value="1"
        >
          bar
        </option>
      </select>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field multiple choice 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-array"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <select
        aria-describedby="root__error root__description root__help"
        autoFocus={false}
        className="custom-select"
        disabled={false}
        id="root"
        multiple={true}
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        value={Array []}
      >
        <option
          disabled={false}
          id="foo"
          value="0"
        >
          foo
        </option>
        <option
          disabled={false}
          id="bar"
          value="1"
        >
          bar
        </option>
        <option
          disabled={false}
          id="fuzz"
          value="2"
        >
          fuzz
        </option>
        <option
          disabled={false}
          id="qux"
          value="3"
        >
          qux
        </option>
      </select>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field multiple choice enumDisabled 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-array"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <select
        aria-describedby="root__error root__description root__help"
        autoFocus={false}
        className="custom-select"
        disabled={false}
        id="root"
        multiple={true}
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        value={Array []}
      >
        <option
          disabled={false}
          id="foo"
          value="0"
        >
          foo
        </option>
        <option
          disabled={true}
          id="bar"
          value="1"
        >
          bar
        </option>
        <option
          disabled={false}
          id="fuzz"
          value="2"
        >
          fuzz
        </option>
        <option
          disabled={false}
          id="qux"
          value="3"
        >
          qux
        </option>
      </select>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field multiple choice formData 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-array"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <select
        aria-describedby="root__error root__description root__help"
        autoFocus={false}
        className="custom-select"
        disabled={false}
        id="root"
        multiple={true}
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        value={
          Array [
            "0",
            "1",
          ]
        }
      >
        <option
          disabled={false}
          id="foo"
          value="0"
        >
          foo
        </option>
        <option
          disabled={false}
          id="bar"
          value="1"
        >
          bar
        </option>
        <option
          disabled={false}
          id="fuzz"
          value="2"
        >
          fuzz
        </option>
        <option
          disabled={false}
          id="qux"
          value="3"
        >
          qux
        </option>
      </select>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field multiple choice with labels 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-array"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <select
        aria-describedby="root__error root__description root__help"
        autoFocus={false}
        className="custom-select"
        disabled={false}
        id="root"
        multiple={true}
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        value={Array []}
      >
        <option
          disabled={false}
          id="Blue"
          value="0"
        >
          Blue
        </option>
        <option
          disabled={false}
          id="Red"
          value="1"
        >
          Red
        </option>
        <option
          disabled={false}
          id="Green"
          value="2"
        >
          Green
        </option>
      </select>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field single choice enumDisabled 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <select
        aria-describedby="root__error root__description root__help"
        autoFocus={false}
        className="custom-select"
        disabled={false}
        id="root"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value=""
      >
        <option
          value=""
        >
          
        </option>
        <option
          disabled={false}
          id="foo"
          value="0"
        >
          foo
        </option>
        <option
          disabled={true}
          id="bar"
          value="1"
        >
          bar
        </option>
      </select>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field single choice formData 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <select
        aria-describedby="root__error root__description root__help"
        autoFocus={false}
        className="custom-select"
        disabled={false}
        id="root"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value="1"
      >
        <option
          value=""
        >
          
        </option>
        <option
          disabled={false}
          id="foo"
          value="0"
        >
          foo
        </option>
        <option
          disabled={false}
          id="bar"
          value="1"
        >
          bar
        </option>
      </select>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields slider field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-integer"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <input
        aria-describedby="root__error root__description root__help"
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        max={100}
        min={42}
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        readOnly={false}
        step={1}
        type="number"
        value={75}
      />
      <span
        className="range-view"
      >
        75
      </span>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field format data-url 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <div>
        <input
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="form-control-file"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          type="file"
          value=""
        />
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field format email 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <input
        aria-describedby="root__error root__description root__help"
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        readOnly={false}
        type="email"
        value=""
      />
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field format uri 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <input
        aria-describedby="root__error root__description root__help"
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        readOnly={false}
        type="url"
        value=""
      />
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field regular 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <input
        aria-describedby="root__error root__description root__help"
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        readOnly={false}
        type="text"
        value=""
      />
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field with placeholder 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <input
        aria-describedby="root__error root__description root__help"
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="placeholder"
        readOnly={false}
        type="text"
        value=""
      />
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields textarea field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <div
        className="input-group"
      >
        <textarea
          aria-describedby="root__error root__description root__help"
          autoFocus={false}
          className="form-control"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          readOnly={false}
          rows={5}
        />
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields title field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="form-group"
    >
      <div
        className="my-1"
        id="root__title"
      >
        <h5>
          Titre 1
        </h5>
        <hr
          className="border-0 bg-secondary"
          style={
            Object {
              "height": "1px",
            }
          }
        />
      </div>
      <div
        className="p-0 container-fluid"
      >
        <div
          className="row"
          style={
            Object {
              "marginBottom": "10px",
            }
          }
        >
          <div
            className="col-12"
          >
             
            <div
              className="form-group field field-string"
            >
              <div
                className="form-group"
              >
                <label
                  className="form-label"
                  htmlFor="root_title"
                >
                  Titre 2
                </label>
                <input
                  aria-describedby="root_title__error root_title__description root_title__help"
                  autoFocus={false}
                  className="form-control"
                  disabled={false}
                  id="root_title"
                  name="root_title"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
                
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields unsupported field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-undefined"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <div
        className="unsupported-field"
      >
        <p>
          <span>
            Unsupported field schema for field 
            <code>
              root
            </code>
            : 
            <em>
              Unknown field type undefined
            </em>
            .
          </span>
        </p>
        <pre>
          {}
        </pre>
      </div>
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields up/down field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-number"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <input
        aria-describedby="root__error root__description root__help"
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        readOnly={false}
        type="number"
        value=""
      />
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields using custom tagName 1`] = `
<div
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="root"
      >
        
      </label>
      <input
        aria-describedby="root__error root__description root__help"
        autoFocus={false}
        className="form-control"
        disabled={false}
        id="root"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        readOnly={false}
        type="text"
        value=""
      />
      
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</div>
`;
